
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint8 ;
typedef int null_data ;
typedef int hwid ;
typedef int STREAM ;
typedef int RC4_KEY ;


 int LICENCE_HWID_SIZE ;
 int LICENCE_SIGNATURE_SIZE ;
 int RC4 (int *,int,int *,int *) ;
 int RC4_set_key (int *,int,int ) ;
 int SEC_MODULUS_SIZE ;
 int SEC_RANDOM_SIZE ;
 int hostname ;
 int in_uint8p (int ,int *,int ) ;
 int licence_generate_hwid (int *) ;
 int licence_generate_keys (int *,int *,int *) ;
 int licence_key ;
 int licence_present (int *,int *,int *,int,int *,int *) ;
 int licence_send_request (int *,int *,int ,int ) ;
 int licence_sign_key ;
 int load_licence (int **) ;
 int memset (int *,int ,int) ;
 int sec_sign (int *,int,int ,int,int *,int) ;
 int username ;
 int xfree (int *) ;

__attribute__((used)) static void
licence_process_demand(STREAM s)
{
 uint8 null_data[SEC_MODULUS_SIZE];
 uint8 *server_random;
 in_uint8p(s, server_random, SEC_RANDOM_SIZE);



 memset(null_data, 0, sizeof(null_data));
 licence_generate_keys(null_data, server_random, null_data);
 licence_send_request(null_data, null_data, username, hostname);
}
