; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_8469.c_licence_process_demand.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_8469.c_licence_process_demand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SEC_MODULUS_SIZE = common dso_local global i32 0, align 4
@SEC_RANDOM_SIZE = common dso_local global i32 0, align 4
@username = common dso_local global i32 0, align 4
@hostname = common dso_local global i32 0, align 4
@LICENCE_HWID_SIZE = common dso_local global i32 0, align 4
@LICENCE_SIGNATURE_SIZE = common dso_local global i32 0, align 4
@licence_key = common dso_local global i32 0, align 4
@licence_sign_key = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @licence_process_demand to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @licence_process_demand(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  store i32 %0, i32* %2, align 4
  %6 = load i32, i32* @SEC_MODULUS_SIZE, align 4
  %7 = zext i32 %6 to i64
  %8 = call i8* @llvm.stacksave()
  store i8* %8, i8** %3, align 8
  %9 = alloca i32, i64 %7, align 16
  store i64 %7, i64* %4, align 8
  %10 = load i32, i32* %2, align 4
  %11 = load i32*, i32** %5, align 8
  %12 = load i32, i32* @SEC_RANDOM_SIZE, align 4
  %13 = call i32 @in_uint8p(i32 %10, i32* %11, i32 %12)
  %14 = mul nuw i64 4, %7
  %15 = trunc i64 %14 to i32
  %16 = call i32 @memset(i32* %9, i32 0, i32 %15)
  %17 = load i32*, i32** %5, align 8
  %18 = call i32 @licence_generate_keys(i32* %9, i32* %17, i32* %9)
  %19 = load i32, i32* @username, align 4
  %20 = load i32, i32* @hostname, align 4
  %21 = call i32 @licence_send_request(i32* %9, i32* %9, i32 %19, i32 %20)
  %22 = load i8*, i8** %3, align 8
  call void @llvm.stackrestore(i8* %22)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @in_uint8p(i32, i32*, i32) #2

declare dso_local i32 @memset(i32*, i32, i32) #2

declare dso_local i32 @licence_generate_keys(i32*, i32*, i32*) #2

declare dso_local i32 @licence_send_request(i32*, i32*, i32, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
